# MEMLNaut-NISPS

./: CLAUDE.md  ChannelStripAudioApp.hpp  MEMLNaut-NISPS.ino  MEMLNaut-PAF-NISPS.ino  NISPS_CORE_EXTRACTION_PLAN.md  NISPS_CORE_TASKS.md  PAFSynthAudioApp.hpp  README.md  ThruAudioApp.hpp  XiasriAnalysis.cpp  XiasriAnalysis.hpp
modes/: MEMLNautMode.hpp  MEMLNautModeChannelStrip.hpp  MEMLNautModePAFSynth.hpp  MEMLNautModeSoundAnalysisMIDI.hpp  MEMLNautModeXIASRI.hpp
nisps-core/: CHANGELOG.md  CMakeLists.txt  README.md
nisps-core/examples/: simple_mapping.cpp
nisps-core/include/nisps/: dataset.hpp  dataset_impl.hpp  iml.hpp  iml_impl.hpp  layer.hpp  loss.hpp  mlp.hpp  mlp_impl.hpp  nisps.hpp  node.hpp  sample.hpp  utils.hpp
nisps-core/test/: CMakeLists.txt  main.cpp
playground/: README.md  index.html  serve.sh
playground/css/: style.css
playground/js/: app.js
playground/js/nisps/: dataset.js  iml.js  layer.js  mlp.js  node.js
playground/js/ui/: controls.js  joystick.js  param-display.js  visualizer.js
voicespaces/: VoiceSpaces.hpp
voicespaces/ChannelStrip/: basic.hpp
